--- a/index.html
+++ b/index.html
@@ -17,7 +17,17 @@
       確信しています。この運動に参加したい方は、
 			<a href="https://learnenough.com/email">今すぐ公式メーリングリストにサインアップいただけます。</a>
     </p>
-		
+	
+		<p>
+      <a href="https://twitter.com/RailsTutorialJP" target="_blank"
+      rel="noopener" style="text-decoration: none;">
+        <img src="images/small_twitter_logo.png">
+      </a>
+      RailsチュートリアルのTwitterフォローをお願いします:
+      <a href="https://twitter.com/RailsTutorialJP"
+         target="_blank" rel="noopener">ここをクリック</a>。
+    </p>
+	
 		<p>
       HTMLは、初代Web「開発者」であるコンピューター科学者<a href="https://ja.wikipedia.org/wiki/
       %E3%83%86%E3%82%A3%E3%83%A0%E3%83%BB%E3%83%90%E3%83%BC%E3%83%8A%E3%83%BC%E3%82%BA%EF
@@ -26,7 +36,9 @@
       しておく方がクールではありませんか？
     </p>
 
-		<img src="images/kitten.jpg" alt="愛くるしい子猫">
+		<a href="https://www.flickr.com/photos/deborah_s_perspective/14144861329">
+			<img src="images/kitten.jpg" alt="愛くるしい子猫">
+		</a>
 
 		<h2>創立までの流れ</h2>
 		
